[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PlayerName" type="LineEdit" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -104.0
margin_right = -72.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 1 )
align = 1
max_length = 10

[node name="SaveButton" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -8.0
margin_right = -72.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Save"

[node name="CancelButton" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 88.0
margin_top = 88.0
margin_right = -72.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 3 )
text = "Cancel"

[connection signal="focus_entered" from="PlayerName" to="." method="_on_PlayerName_focus_entered"]
[connection signal="text_entered" from="PlayerName" to="." method="_on_PlayerName_text_entered"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
